Replite kodları eklendi Ortam değişkenleri için hata kontrolü ve hata ayıklama logları eklendi. Telegram botu başlatma sürecine detaylı hata yakalama mekanizmaları entegre edildi. Savaş bilgisi ve eksik saldırı listesi için mesaj formatı güncellendi. Ayrıca, Replit için keep-alive servisi eklendi ve botun düzgün kapanması için graceful shutdown mekanizması oluşturuldu.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Clash of Clans Telegram Bot with War Notifications",
   "main": "index.js",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=7.0.0"
+  },
   "scripts": {
     "start": "node index.js",
     "dev": "node index.js"
